--- a/index.html
+++ b/index.html
@@ -6,30 +6,30 @@
   <title>網站錯誤 - 服務中斷</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      background: linear-gradient(135deg, #9146FF, #5e2a6d); /* 更淺的漸層紫色 */
-      color: #ffffff;
-      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6); /* 文字陰影增強可讀性 */
-      flex-direction: column;
-      text-align: center;
-      position: relative;
+      font-family: Arial, sans-serif; /* 設置字體為 Arial，若無則使用 sans-serif */
+      margin: 0; /* 去除頁面外邊距 */
+      padding: 0; /* 去除頁面內邊距 */
+      display: flex; /* 設定為彈性佈局 */
+      justify-content: center; /* 水平對齊內容至容器的中間 */
+      align-items: center; /* 垂直對齊內容至容器的中間 */
+      height: 100vh; /* 設定容器高度為視窗高度 (100% 视窗高度) */
+      background: linear-gradient(135deg, #9146FF, #5e2a6d); /* 設置背景為從 #9146FF 到 #5e2a6d 的漸層 */
+      color: #ffffff; /* 設置文字顏色為白色 */
+      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6); /* 為文字添加陰影，增強可讀性 */
+      flex-direction: column; /* 設定彈性容器內部排列為垂直方向（上下） */
+      text-align: center; /* 設定文字居中對齊 */
+      position: relative; /* 設定相對定位，使得可以對內部元素進行絕對定位 */
     }
 
     h1 {
       color: #ffffff; /* 白色文字 */
-      font-size: 3em;
+      font-size: 3em; /* 設置字體大小為 3 倍的當前元素的字體大小。 */
       margin: 20px 0;
     }
 
     p {
       font-size: 1.2em;
-      line-height: 1.6;
+      line-height: 1.6; /* 設置行高為字體大小的 1.6 倍 */
       margin: 15px 0;
     }
 
@@ -37,11 +37,11 @@
       font-size: 1.1em;
       text-align: left;
       margin: 10px 0;
-      padding-left: 20px;
+      padding-left: 20px; /* 設置元素左邊的內邊距為 20px */
     }
 
     li {
-      margin-bottom: 10px;
+      margin-bottom: 10px; /* 設置元素底部的外邊距為 10px */
     }
 
     /* 左上角圖片 */
